--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,1 +1,18 @@
-style.css
+
+* {
+	background-color: black;
+}
+
+h1 {
+	color: white;
+	text-align: center;
+}
+
+p {
+	color: red;
+	text-align: center;
+}
+
+.links {
+	color: teal;
+}
