--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,22 +4,36 @@
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
+	font-family: Verdana;
 }
 
-h1, h5 {
+h1 {
+	font-size: 50px;
 	color: white;
+	font-weight: normal;
+}
+
+
+h2 {
+	color: white;
+	font-size: 42px; 
+	font-weight: 300;
 }
 
 h4 {
 	color: gray;
+	font-size: 21px;
 }
 
-p {
-	color: red;
+h5 {
+	color: gray;
+	text-align: right;
+	margin-right: 10px;
 }
 
 .links {
-	color: teal;
+	color: aquamarine;
+	font-size: 16px;
 }
 
 .footer {
